force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <description>Object to hold all shipment details such as contents being shipped (cargo), who the sender and receiver are and where the shipment is going.</description>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SH-{000000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>