force-app/main/default/objects/Shipment__c/fields/Date_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Date_Delivered__c</fullName>
    <description>The date upon which the parcel is finally delivered to the recipient.</description>
    <label>Date Delivered</label>
    <type>Date</type>
</CustomField>