force-app/main/default/objects/Shipment__c/fields/Delay_Likelihood_Score_Data_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Delay_Likelihood_Score_Data_Cloud__c</fullName>
    <description>Prediction of the likelihood of the shipment being delayed based on previous shipment data.</description>
    <inlineHelpText>Prediction of the likelihood of the shipment being delayed based on previous shipment data.</inlineHelpText>
    <label>Delay Likelihood Score (Data Cloud)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>