force-app/main/default/objects/Shipment__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>The date when the parcel is dispatched from the Sender to the Receiver.</description>
    <label>Departure Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>