force-app/main/default/objects/Shipment__c/fields/Destination_Planetary_System__c.field-meta.xml
<CustomField>
    <fullName>Destination_Planetary_System__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Planetary System where the shipment is being sent to.</description>
    <label>Destination Planetary System</label>
    <referenceTo>Planetary_System__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>