force-app/main/default/objects/Shipment__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <description>The distance that will be travelled in light years</description>
    <label>Total Distance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>