force-app/main/default/objects/Shipment__c/fields/Estimated_Direct_Distance__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Direct_Distance__c</fullName>
    <description>Calculates the straight-line distance (see Step 3).</description>
    <formula>SQRT(
    (Destination_Planetary_System__r.X_Coordinate__c - Origin_Planetary_System__r.X_Coordinate__c) * (Destination_Planetary_System__r.X_Coordinate__c - Origin_Planetary_System__r.X_Coordinate__c) +

    (Destination_Planetary_System__r.Y_Coordinate__c - Origin_Planetary_System__r.Y_Coordinate__c) * (Destination_Planetary_System__r.Y_Coordinate__c - Origin_Planetary_System__r.Y_Coordinate__c) +

    (Destination_Planetary_System__r.Z_Coordinate__c - Origin_Planetary_System__r.Z_Coordinate__c) * (Destination_Planetary_System__r.Z_Coordinate__c - Origin_Planetary_System__r.Z_Coordinate__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Direct Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>