force-app/main/default/objects/Shipment__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>The date when the parcel is estimated to arrive at the delivery destination.</description>
    <label>ETA (Estimated Time of Arrival)</label>
    <type>Date</type>
</CustomField>