force-app/main/default/objects/Shipment__c/fields/Fuel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cost__c</fullName>
    <description>The amount of fuel the shipment will cost.</description>
    <label>Fuel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>