force-app/main/default/objects/Shipment__c/fields/Is_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Delayed__c</fullName>
    <formula>IF(TEXT(Status__c) = &quot;Delayed&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Delayed?</label>
    <type>Checkbox</type>
</CustomField>