force-app/main/default/objects/Shipment__c/fields/Origin_Planetary_System__c.field-meta.xml
<CustomField>
    <fullName>Origin_Planetary_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Planetary System from which the shipment is being sent.</description>
    <label>Origin Planetary System</label>
    <referenceTo>Planetary_System__c</referenceTo>
    <relationshipLabel>Shipments (Origin Planetary System)</relationshipLabel>
    <relationshipName>ShipmentsO</relationshipName>
    <type>Lookup</type>
</CustomField>