force-app/main/default/objects/Shipment__c/fields/Original_Booking__c.field-meta.xml
<CustomField>
    <fullName>Original_Booking__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Details of the original booking for the shipment.</description>
    <label>Original Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>