force-app/main/default/objects/Shipment__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Details of the party receiving the parcel.</description>
    <label>Recipient/Consignee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>