force-app/main/default/objects/Shipment__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Details of the Sender/Consignor of the parcel.</description>
    <label>Sender/Consignor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>