force-app/main/default/objects/Shipment__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <description>Information on the type of space travel requested.</description>
    <label>Shipping Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warp Drive</fullName>
            </value>
            <value>
                <fullName>Hyperspace</fullName>
            </value>
            <value>
                <fullName>Sub-light Cruise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>