force-app/main/default/objects/Shipment__c/fields/Suggested_Shipping_Route__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Shipping_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Recommended Shipping Route based on time and risk factor.</description>
    <label>Suggested Shipping Route</label>
    <referenceTo>Shipping_Route__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>