force-app/main/default/objects/Shipment__c/fields/Total_Cargo_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Cargo_Weight__c</fullName>
    <description>Represents the total weight in KG of the cargo being shipped.</description>
    <label>Total Cargo Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>