force-app/main/default/objects/Shipment__c/fields/Total_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivery_Time__c</fullName>
    <description>The total number of time in days taken for the parcel to be delivered to the recipient. Calculated from Departure Date to Delivery Date.</description>
    <label>Total Delivery Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>