force-app/main/default/objects/Shipment__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <description>The total weight of all the cargo related to the Shipment.</description>
    <inlineHelpText>The total weight of all the cargo related to the Shipment.</inlineHelpText>
    <label>Total Cargo Weight</label>
    <summarizedField>Cargo__c.Weight__c</summarizedField>
    <summaryForeignKey>Cargo__c.Shipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>