force-app/main/default/objects/Shipment__c/validationRules/ETA_Must_Be_After_Departure_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ETA_Must_Be_After_Departure_Date</fullName>
    <active>true</active>
    <description>Ensures that the ETA is after the Departure date for the shipment.</description>
    <errorConditionFormula>ETA__c &lt;  Departure_Date__c</errorConditionFormula>
    <errorDisplayField>ETA__c</errorDisplayField>
    <errorMessage>ETA must be after the departure date.</errorMessage>
</ValidationRule>